[gd_scene load_steps=9 format=3 uid="uid://5t5rtqxp61dy"]

[ext_resource type="Script" path="res://src/game/player.gd" id="1_21smu"]
[ext_resource type="SpriteFrames" uid="uid://ce8sxgysi15q5" path="res://assets/characters/player/player_sprite_frames.tres" id="2_63n2m"]
[ext_resource type="AudioStream" uid="uid://cebju2b7ouf82" path="res://assets/sounds/jump.wav" id="3_47665"]
[ext_resource type="AudioStream" uid="uid://bm7tgjnq42ybi" path="res://assets/sounds/dash.wav" id="4_h3ksm"]
[ext_resource type="AudioStream" uid="uid://c0r84jdrakxdw" path="res://assets/sounds/step_1.wav" id="5_248jy"]
[ext_resource type="AudioStream" uid="uid://do08kia4b73op" path="res://assets/sounds/step_2.wav" id="6_h4xha"]
[ext_resource type="AudioStream" uid="uid://bied2qfideagg" path="res://assets/sounds/step_3.wav" id="7_t5l3s"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6takb"]
radius = 8.0
height = 24.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
z_index = 10
collision_layer = 2
script = ExtResource("1_21smu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = ExtResource("2_63n2m")
animation = &"walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -12)
shape = SubResource("CapsuleShape2D_6takb")

[node name="Audio" type="Node" parent="."]

[node name="Jump" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("3_47665")
bus = &"Sound"

[node name="Dash" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("4_h3ksm")
bus = &"Sound"

[node name="Steps" type="Node" parent="Audio"]

[node name="Step1" type="AudioStreamPlayer" parent="Audio/Steps"]
stream = ExtResource("5_248jy")
max_polyphony = 5
bus = &"Sound"

[node name="Step2" type="AudioStreamPlayer" parent="Audio/Steps"]
stream = ExtResource("6_h4xha")
max_polyphony = 5
bus = &"Sound"

[node name="Step3" type="AudioStreamPlayer" parent="Audio/Steps"]
stream = ExtResource("7_t5l3s")
max_polyphony = 5
bus = &"Sound"

[node name="StepTimer" type="Timer" parent="."]
wait_time = 0.25

[connection signal="animation_changed" from="AnimatedSprite2D" to="." method="on_animation_changed"]
[connection signal="timeout" from="StepTimer" to="." method="play_step_sound"]
